# tiny_renderer

./: .gitignore  CMakeLists.txt  README.md
assimp/lib/: assimp-vc142-mt.exp
include/: camera.h  camera_base.h  common.h  draw.h  fixed_camera.h  fps_camera.h  frame_buffer.h  loader.h  matrix.hpp  mesh.h  model.h  shader.h  soft_renderer.h  texture2d.h  texture_cube.h  vec.hpp  window.h
shader/: LightShader.cpp  LightShader.h  blinn_phong.cpp  blinn_phong.h  depth_shader.cpp  depth_shader.h  light_shader.cpp  light_shader.h  normal_mapping.cpp  normal_mapping.h  shader.cpp  shader.h  shader_args.cpp  shader_args.h  shader_base.cpp  shader_base.h  skybox_reflect.cpp  skybox_reflect.h  skybox_shader.cpp  skybox_shader.h  texture_mapping.cpp  texture_mapping.h
shader/blinn_phong/: blinn_phong.h
shader/depth_test/: depth_shader.cpp  depth_shader.h
shader/normal_mapping/: normal_mapping.cpp
shader/parallax_mapping/: parallax_mapping.cpp  parallax_mapping.h
shader/skybox/: skybox_reflect.cpp  skybox_shader.cpp  skybox_shader.h
shader/texture_mapping/: texture_mapping.cpp  texture_mapping.h
src/: camera.cpp  camera_base.cpp  draw.cpp  fixed_camera.cpp  fps_camera.cpp  frame_buffer.cpp  loader.cpp  main.cpp  mesh.cpp  model.cpp  soft_renderer.cpp  texture2d.cpp  texture_cube.cpp  window.cpp
test/: test.cpp  test.h
